# lifelong-drl

./: .gitignore  .gitmodules  pyproject.toml  setup.py
crl/agents/: stream_q_minatar.py
crl/agents/stream_ac/: stream_ac_discrete.py
crl/agents/stream_q/: stream_q.py  stream_q_atari.py
crl/agents/wandb/: latest-run
crl/agents/wandb/run-20250626_113359-9qmwm71b/files/: wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_115132-gbd8lqiz/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_124356-7r2jxwmb/files/: wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_130337-5ew1qu6m/: run-5ew1qu6m.wandb
crl/agents/wandb/run-20250626_130337-5ew1qu6m/files/: wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_131042-yx5r22y1/: run-yx5r22y1.wandb
crl/agents/wandb/run-20250626_131042-yx5r22y1/files/: wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_131135-6my7sms0/: run-6my7sms0.wandb
crl/agents/wandb/run-20250626_131135-6my7sms0/files/: wandb-metadata.json  wandb-summary.json
crl/agents/wandb/run-20250626_135631-cohojozu/files/: wandb-metadata.json
crl/agents/wandb/run-20250626_135648-0wfjhwwn/files/: wandb-metadata.json
crl/envs/jbw/: env.py
crl/envs/minatar/: continual_env.py  environment.py
crl/jbw/: env_params.py  stream_ac_discrete_jbw.py
crl/minatar/: breakout.py  continual_env.py  environment.py  freeway.py  space_invaders.py  stream_q_minatar.py
crl/wandb/: latest-run
crl/wandb/run-20250626_110944-b5k1gg9q/: run-b5k1gg9q.wandb
crl/wandb/run-20250626_110944-b5k1gg9q/files/: config.yaml  wandb-metadata.json  wandb-summary.json
crl/wandb/run-20250626_112826-zo26dw73/: run-zo26dw73.wandb
crl/wandb/run-20250626_112826-zo26dw73/files/: wandb-metadata.json  wandb-summary.json
