[project]
name = "crl"
version = "0.1.0"
description = "Continual reinforcement learning from a single stream of experience"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "ale-py>=0.8.1",
    "autorom==0.4.2",
    "autorom-accept-rom-license==0.6.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "decorator==4.4.2",
    "dm-control==1.0.14",
    "dm-env==1.6",
    "dm-tree==0.1.8",
    "etils==1.8.0",
    "farama-notifications==0.0.4",
    "filelock==3.13.4",
    "fonttools==4.51.0",
    "fsspec==2024.3.1",
    "glfw==2.7.0",
    "gymnasium==0.29.1",
    "idna==3.7",
    "imageio==2.34.1",
    "imageio-ffmpeg==0.4.9",
    "importlib-resources==6.4.0",
    "jinja2==3.1.3",
    "kiwisolver==1.4.5",
    "labmaze==1.0.6",
    "lxml==5.2.1",
    "lz4==4.3.3",
    "markupsafe==2.1.5",
    "matplotlib==3.8.4",
    "minatar==1.0.15",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "packaging==24.0",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "proglog==0.1.10",
    "protobuf==5.26.1",
    "pyopengl==3.1.7",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "requests==2.31.0",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "shimmy==0.2.1",
    "six==1.16.0",
    "sympy>=1.13.3",
    "tqdm==4.66.2",
    "typing-extensions==4.11.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "zipp==3.18.1",
    "mujoco",
    "torch==2.7.0+cu128",
    "triton==3.3.0",
    "wandb",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["crl"]

[tool.uv.sources]
crl = { path=".", editable = true }
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "default"
url = "https://pypi.org"

[[tool.uv.index]]
name = "cuda"
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "crl",
]
